--- a/css/index.scss
+++ b/css/index.scss
@@ -30,7 +30,7 @@ body {
 // mixins for tagname
 @mixin h1-style($color) {
     color: $color;
-    font-size: 3em;
+    font-size: 2em;
     line-height: 130%;
 
     @media (min-width: 767px) {
@@ -47,16 +47,16 @@ body {
     text-decoration: $decor;
     color: $color;
     font-weight: 700;
-    font-size: 1.3em;
+    font-size: 1em;
 }
 
 // using tag name
 p {
-    font-size: 1.3em;
+    font-size: 1em;
     color: $greyish-text;
 
     @media (min-width: 767px) {
-        font-size: 1.12em;
+        font-size: 1.1em;
     }
 
     @media (min-width: 1024px) {
@@ -73,11 +73,11 @@ p {
     font-weight: 600;
     border: none;
     outline: none;
-    font-size: 1.3em;
+    font-size: 1em;
     border-radius: 5px;
 
     @media (min-width: 767px) {
-        font-size: 1.2em;
+        font-size: 1.1em;
     }
 
     @media (min-width: 1024px) {
@@ -193,8 +193,6 @@ header {
         margin-bottom: 30px;
     }
 
-    
-
     p {
         margin-bottom: 30px;
     }
@@ -207,19 +205,17 @@ header {
             flex-direction: row;
             gap: 20px;
 
-            h1{
+            h1 {
                 width: 200%;
                 font-size: 1.5em;
             }
-
         }
 
         @media (min-width: 1024px) {
-            h1{
+            h1 {
                 font-size: 3em;
             }
         }
-
     }
 }
 
@@ -263,15 +259,13 @@ footer {
         justify-content: space-between;
         flex-wrap: wrap;
 
-        
         div {
             width: 50%;
             margin-bottom: 20px;
 
-            @media (min-width:767px) {
+            @media (min-width: 767px) {
                 width: 33%;
             }
-    
 
             a {
                 display: block;
@@ -282,25 +276,32 @@ footer {
         }
     }
 
-    fieldset {margin-top: 20px;
+    fieldset {
+        margin-top: 20px;
         border-radius: 10px;
         border-color: $greyish-text;
         display: flex;
         justify-content: space-between;
         padding: 10px;
 
-        @media (min-width:767px) {
+        @media (min-width: 767px) {
             width: 70%;
         }
-
 
         input {
             display: block;
             width: 50%;
-            font-size: 1.3em;
+            font-size: 1em;
             padding-left: 20px;
             outline: none;
             border: none;
+        }
+
+        @media (max-width: 767px) {
+            .btn-link {
+                padding: 10px;
+                font-size: 0.8em;
+            }
         }
     }
 }
